# euronextrs

./: .gitignore  Cargo.toml  Cross.toml  Dockerfile  README.md
.github/workflows/: cd.yml  ci.yml
src/: main.rs
