[package]
name = "exchange-rs"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Otavio V. B. Oliveira <luiz.vbo@gmail.com>"]
homepage = "https://github.com/luizvbo/exchange-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json"] }
scraper = "0.21"
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5.22" }

[workspace.metadata.cross]
targets = [
    "aarch64-unknown-linux-gnu",
    "aarch64-unknown-linux-musl",
    "arm-unknown-linux-gnueabihf",
    "arm-unknown-linux-musleabihf",
    "i686-unknown-linux-gnu",
    "i686-unknown-linux-musl",
    "x86_64-unknown-linux-gnu",
    "x86_64-unknown-linux-musl",
]

[workspace.metadata.cross.targets.*]
pre-build = [
    "dpkg --add-architecture $CROSS_DEB_ARCH",
    "apt-get update && apt-get --assume-yes install libssl-dev:$CROSS_DEB_ARCH"
]
