[package]
name = "exchange-rs"
version = "0.1.0"
edition = "2021"
authors = ["Luiz Otavio V. B. Oliveira <luiz.vbo@gmail.com>"]
homepage = "https://github.com/luizvbo/exchange-rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
scraper = "0.21"
tokio = { version = "1.42", features = ["full"] }
clap = { version = "4.5.22" }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }


[target.'cfg(any(target_arch = "aarch64", target_arch = "arm"))'.dependencies]
reqwest = { version = "0.12.9", features = ["blocking", "json", "native-tls-vendored"] }
