[package]
name = "exchange-rs"
version = "0.1.1"
edition = "2021"
authors = ["Luiz Otavio V. B. Oliveira <luiz.vbo@gmail.com>"]
homepage = "https://github.com/luizvbo/exchange-rs"

[dependencies]
scraper = "0.21"
clap = { version = "4.5.22", features = ["derive"] }
reqwest = { version = "0.12.9", features = ["blocking", "json"] }


[target.'cfg(any(target_arch = "aarch64", target_arch = "arm", target_env = "musl"))'.dependencies]
reqwest = { version = "0.12.9", features = [
  "blocking",
  "json",
  "native-tls-vendored",
] }

[profile.release]
opt-level = "z"   # Optimize for size
strip = true      # Strip debug information from the binary
lto = "thin"      # Enable Link-Time Optimization (LTO)
